// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should deauth on 401 on creation 1`] = `
Array [
  Array [
    "[1mGenerating new deployment token for:[22m",
    "http://localhost:8080",
  ],
  Array [
    "[31mError: authorization expired![39m",
    "Please, relogin and try again.",
  ],
]
`;

exports[`Should deauth on 401 on list 1`] = `
Array [
  Array [
    "[1mListing deployment tokens for:[22m",
    "http://localhost:8080",
  ],
  Array [
    "[31mError: authorization expired![39m",
    "Please, relogin and try again.",
  ],
]
`;

exports[`Should generate token 1`] = `
Array [
  Array [
    "[1mGenerating new deployment token for:[22m",
    "http://localhost:8080",
  ],
  Array [
    "[1mNew token generated:[22m",
  ],
  Array [
    "",
  ],
  Array [
    "test",
  ],
  Array [
    "",
  ],
  Array [
    "[33mWARNING![39m",
    "Make sure to write it down, you will not be able to get it again!",
  ],
]
`;

exports[`Should list tokens 1`] = `
Array [
  Array [
    "[1mListing deployment tokens for:[22m",
    "http://localhost:8080",
  ],
  Array [
    "[1mGot generated tokens:[22m",
  ],
  Array [
    "",
  ],
  Array [
    "  > [32mtest[39m [90m[2/1/2017, 1:01:01 AM][39m",
  ],
]
`;

exports[`Should list zero tokens 1`] = `
Array [
  Array [
    "[1mListing deployment tokens for:[22m",
    "http://localhost:8080",
  ],
  Array [
    "[1mGot generated tokens:[22m",
  ],
  Array [
    "",
  ],
  Array [
    "  > No deployment tokens available!",
  ],
]
`;

exports[`Should remove token 1`] = `
Array [
  Array [
    "[1mRemoving deployment token for:[22m",
    "http://localhost:8080",
  ],
  Array [
    "[32mDeployment token successfully removed![39m",
  ],
]
`;
